kafka/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka
spec:
  entryPoints:
    - kafka
  routes:
    - match: HostSNI(`*`)
      services:
        - name: kafka-client
          port: 9092
